Newsletter progress. Mostly done just need to resolve spacings

--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -36,6 +36,5 @@ footer a:hover {
 }
 
 footer h3 {
-  font-size: clamp(1.125rem, 2.12vw, 1.575rem);
   color: variables.$alternate-color;
 }
